--- a/html/index.html
+++ b/html/index.html
@@ -27,6 +27,7 @@
         <a href="https://www.stanford.edu/">Stanford Search</a> <br>
         <a href="https://www.linux.org/">Linux Search</a> 
     </div>
+    
     <!-- Bilgi Bloğu -->
     <div class="bilgi">
         <a href="/html/help.html">Help!</a> <br>
@@ -34,12 +35,17 @@
         <a href="/html/Company.html">Company Info</a> <br>
         <a href="/html/logo.html">Google Logos</a> 
     </div>
+
     <!-- Sub Bloğu -->
     <div class="sub">
         <h5>Get Google! <br> updates monthly</h5>
         <input class="search-but" type="search" id="gsearch" name="gsearch"> <br>
         <input type="submit" value="Subscribe">
     </div>
+
     <!-- Footer Bloğu -->
+    <div>
+        <p id="foot">Copyright © 1998 Google Inc.</p>
+    </div>
 </body>
 </html>
