--- a/html/index.html
+++ b/html/index.html
@@ -38,7 +38,13 @@
 
     <!-- Sub Bloğu -->
     <div class="sub">
-        <h5>Get Google! <br> updates monthly</h5>
+        <p>
+            <strong>Get Google
+                <br>
+                updates monthly!
+            </strong>
+        </p>
+
         <input class="search-but" type="search" id="gsearch" name="gsearch"> <br>
         <input type="submit" value="Subscribe">
     </div>
